# dwmstatus

./: .gitignore  README.md  dwmstatus.c  main.c  ui.c
c/: dwmstatus.h
rust/: Cargo.toml
rust/src/: audio.rs  battery.rs  cpu.rs  date.rs  disk.rs  lib.rs  main.rs  memory.rs  output.rs  signals.rs  time.rs  wifi.rs
