[package]
name = "dwmstatus"
description = "A program for retrieving system information and setting the dwm status bar output"
licence = "MIT"
authors = ["Zachary Silver <zmansilver@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
libc = "0.2"
alsa-sys = "0.3"
signal-hook = { version = "0.3.4", features = ["extended-siginfo"] }
